--- a/tealcrm/core/templates/core/base.html
+++ b/tealcrm/core/templates/core/base.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <title>{%block title%}{%endblock%}</title>
 </head>
 <body>
     <nav class="py-6 px-6 flex justify-between bg-teal-500">
@@ -12,10 +14,11 @@
         <div>
             <a href="/" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Login</a>
             <a href="/" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Register</a>
-            
+
         </div>
     </nav>
-
+    {%block content%}
+    {%endblock%}
     <footer class="py-8 text-center bg-gray-200" >
       <p class="text-xs text-gray-700">Copyright (c) 2023 - Teal CRM</p>
     </footer>
