--- a/tealcrm/core/templates/core/base.html
+++ b/tealcrm/core/templates/core/base.html
@@ -11,9 +11,10 @@
     <nav class="py-6 px-6 flex justify-between bg-teal-500">
         <a href="/" class="text-white">Teal CRM</a>
 
-        <div>
-            <a href="/" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Login</a>
-            <a href="/" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Register</a>
+        <div class="space-x-4">
+            <a href="{% url 'about' %}" class=" text-white">About</a>
+            <a href="{% url 'login'%}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Login</a>
+            <a href="{% url 'signup'%}" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Register</a>
 
         </div>
     </nav>
