--- a/tealcrm/core/templates/core/base.html
+++ b/tealcrm/core/templates/core/base.html
@@ -13,8 +13,13 @@
 
         <div class="space-x-4">
             <a href="{% url 'about' %}" class=" text-white">About</a>
-            <a href="{% url 'login'%}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Login</a>
-            <a href="{% url 'signup'%}" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Register</a>
+            {% if request.user.is_authenticated %}
+              <a href="{% url 'logout'%}" class="py-4 px-6 bg-red-600 rounded-xl text-white">Logout</a>
+            {% else %}
+              <a href="{% url 'login'%}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Login</a>
+              <a href="{% url 'signup'%}" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Register</a>
+            {% endif %}
+            
 
         </div>
     </nav>
