--- a/tealcrm/core/templates/core/base.html
+++ b/tealcrm/core/templates/core/base.html
@@ -14,7 +14,9 @@
         <div class="space-x-4">
             <a href="{% url 'about' %}" class=" text-white">About</a>
             {% if request.user.is_authenticated %}
+              <a href="{% url 'dashboard'%}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Dashboard</a>
               <a href="{% url 'logout'%}" class="py-4 px-6 bg-red-600 rounded-xl text-white">Logout</a>
+            
             {% else %}
               <a href="{% url 'login'%}" class="py-4 px-6 bg-teal-600 rounded-xl text-white">Login</a>
               <a href="{% url 'signup'%}" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Register</a>
